--- a/public/404.html
+++ b/public/404.html
@@ -5,12 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Homepage</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <title>404 Not Found</title>
 </head>
 
 <body>
-    <h1>Welcome to the homepage</h1>
+    <h1> 404 Not Found  </h1>
 </body>
 
 </html>
